<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!-- app information -->
	<string name="app_name">Ancient Empires</string>
	<string name="hello_world">Hello world!!!</string>

	<!-- menu titles -->
	<string name="action_settings">Settings</string>
	<string name="action_game_ancientempires">Ancient Empires</string>
	<string name="action_back">Back</string>

	<!-- activities titles -->
	<string name="title_activity_game">Game</string>
	<string name="title_activity_unit_buy">Buy Unit</string>

	<!-- buttons in game menu -->
	<string name="campaign">Campaign</string>
	<string name="singleplayer">Singleplayer</string>
	<string name="multiplayer">Multiplayer</string>

	<!-- other -->
	<string name="loading">Loading</string>
	<string name="action_buy">Buy</string>
	<string name="textview_title_cost">Cost</string>
	<string name="textview_title_attack">Attack</string>
	<string name="textview_title_defence">Defence</string>
	<string name="textview_title_way">Way</string>
	<string name="action_reset">Reset</string>
	<string name="title_activity_level_menu">LevelMenuActivity</string>
	<string name="title_activity_test">MainActivity</string>

</resources>