<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:layout_margin="10dp"
	android:gravity="center_vertical"
	android:orientation="vertical" >

	<Button
		android:id="@+id/button_campaign"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/action_game_ancientempires" />

	<Button
		android:id="@+id/button_singleplayer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/singleplayer" >
	</Button>

	<Button
		android:id="@+id/button_multiplayer"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/multiplayer" >
	</Button>

</LinearLayout>